gcc/testsuite/rust/rustc/ui/issues/issue-1900.rs
fn main<T>() { }
// { dg-error ".E0131." "" { target *-*-* } .-1 }

